<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            app:layout_scrollFlags="scroll|enterAlways|snap"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/orange">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/tv_scan"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:text="{icon-scan}"
                    android:textColor="@color/white"
                    android:textSize="27sp"
                    tools:ignore="HardcodedText" />

                <android.support.v7.widget.AppCompatEditText
                    android:focusable="false"
                    android:id="@+id/et_search"
                    android:background="@color/white"
                    android:layout_gravity="center"
                    android:textColorHint="@color/gray"
                    android:gravity="center"
                    android:hint="search here"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="5"
                    tools:ignore="HardcodedText" />

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/tv_msg"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:text="{fa-comment-o}"
                    android:textColor="@color/white"
                    android:textSize="27sp"
                    tools:ignore="HardcodedText" />
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
   <!-- recyclerview  遮住 toobar的问题解决-->
    <!--1：使用AppBarLayout解决 参考第一行代码AppBarLayout使用-->
    <!--2： 先放置recyclerview  再放Toobar ConstraintLayout理解为加强版本FramLayout -->
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:rowCount="2"
                android:columnCount="3">
                <Button
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:text="@string/sendOne"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:id="@+id/bsendOne"
                    />
                <Button
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:text="@string/sendTwo"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:id="@+id/bsendTwo"
                    />
                <Button
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:text="@string/sendThree"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:id="@+id/bsendThree"
                    />
                <Button
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:text="@string/sendFour"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:id="@+id/bsendFour"
                    />
                <Button
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:text="@string/sendFive"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:id="@+id/bsendFive"
                    />
                <Button
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:text="@string/sendSix"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:id="@+id/bsendSix"
                    />
            </GridLayout>
            <TextView
                android:id="@+id/bResponse"
                android:layout_width="wrap_content"
                android:layout_height="200sp"
                android:text="内容："
                android:textSize="18sp" />
            <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:rowCount="2"
                android:columnCount="2">
                <EditText
                    android:id="@+id/badress"
                    android:layout_width="180sp"
                    android:layout_height="100sp"
                    android:layout_weight="0.2"
                    android:hint="address"
                    />
                <EditText
                    android:id="@+id/bfrom"
                    android:layout_width="180sp"
                    android:layout_height="100sp"
                    android:layout_weight="0.2"
                    android:hint="from"
                    />
                <EditText
                    android:id="@+id/bto"
                    android:layout_width="180sp"
                    android:layout_height="100sp"
                    android:layout_weight="0.2"
                    android:hint="to"
                    />
                <EditText
                    android:id="@+id/bamonut"
                    android:layout_width="180sp"
                    android:layout_height="100sp"
                    android:layout_weight="0.2"
                    android:hint="amount"
                    />
            </GridLayout>
        </android.support.v7.widget.LinearLayoutCompat>
         <android.support.v7.widget.RecyclerView
             android:background="@color/white"
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/recomment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tuijian"
        android:layout_gravity= "end|bottom"
        android:layout_margin="16dp"
        app:elevation="8dp"/>
</android.support.design.widget.CoordinatorLayout>